--- a/index.html
+++ b/index.html
@@ -1,2 +1,41 @@
-<h1>Hello</h1>
-<h1>Help</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Site Title</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f4f4f4;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    img {
+      width: 300px;
+      height: auto;
+      margin: 20px;
+    }
+    a {
+      color: #1d72b8;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Welcome to My Website!</h1>
+  <h2>My Favorite Hobby: Photography</h2>
+  
+  <p>This website is all about my passion for photography and why I love capturing beautiful moments.</p>
+  
+  <h2>Check Out Some of My Favorite Shots</h2>
+  
+  <img src="https://via.placeholder.com/300" alt="Sample Image 1">
+  <img src="https://via.placeholder.com/300" alt="Sample Image 2">
+  
+  <p>For more photography tips, visit <a href="https://www.photographywebsite.com">Photography Website</a>.</p>
+
+</body>
+</html>
