--- a/index.html
+++ b/index.html
@@ -4,24 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Site Title</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f4f4f4;
-    }
-    h1, h2 {
-      color: #333;
-    }
-    img {
-      width: 300px;
-      height: auto;
-      margin: 20px;
-    }
-    a {
-      color: #1d72b8;
-    }
-  </style>
+  <!-- Link to the external CSS file -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
