--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Site Title</title>
-  <!-- Link to the external CSS file -->
+  <title>Areen Jain</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <h1>Welcome to My Website!</h1>
-  <h2>My Favorite Hobby: Photography</h2>
+  <h2>About Me</h2>
   
-  <p>This website is all about my passion for photography and why I love capturing beautiful moments.</p>
+  <p>Hello! I'm Areen Jain, a sophomore at Whitney High School. 
+    I'm passionate about technology and programming, and my goal is to study computer science at UCLA. 
+    I have always been fascinated by how technology shapes the world, and I dream of making an impact 
+    in the field of software development.</p>
   
   <h2>Check Out Some of My Favorite Shots</h2>
   
