--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Areen Jain</title>
+  <title>Areen Jain's Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <h1>Welcome to My Website!</h1>
-  <h2>About Me</h2>
+  <h1>Areen Jain</h1>
+  <h2>Sophomore at Whitney High School</h2>
   
   <p>Hello! I'm Areen Jain, a sophomore at Whitney High School. 
-    I'm passionate about technology and programming, and my goal is to study computer science at UCLA. 
-    I have always been fascinated by how technology shapes the world, and I dream of making an impact 
-    in the field of software development.</p>
+  I'm passionate about technology and programming, and my goal is 
+  to study computer science at UCLA. I have always been fascinated by 
+  how technology shapes the world, and I dream of making an impact in 
+  the field of software development.</p>
+
+  <img src="https://assets.onecompiler.app/42t9u98fj/42t9u73nc/Screenshot%202024-09-25%20at%204.18.44%E2%80%AFPM.png	"  alt="Areen Jain at school">
   
-  <h2>Check Out Some of My Favorite Shots</h2>
+  <h2>My Dream School: UCLA</h2>
+  <p>My dream is to study at <a href="https://www.ucla.edu" target="_blank">UCLA</a>, one of the top schools for computer science.</p>
   
-  <img src="https://via.placeholder.com/300" alt="Sample Image 1">
-  <img src="https://via.placeholder.com/300" alt="Sample Image 2">
-  
-  <p>For more photography tips, visit <a href="https://www.photographywebsite.com">Photography Website</a>.</p>
+  <img src="https://assets.onecompiler.app/42t9u98fj/42t9u73nc/ucla.jpeg" alt="UCLA Campus">
+
+  <p>Learn more about me at my <a href="page1.html">Interests Page</a>.</p>
 
 </body>
 </html>
