--- a/page1.html
+++ b/page1.html
@@ -21,13 +21,13 @@
   <h2>Math and Computer Science</h2>
   <p>Math and computer science are my passions. I enjoy solving complex
   problems and building software projects. These fields challenge me to 
-  think critically and creatively, which is why I pursue them in the 
+  think critically and creatively, which is why I want to pursue them in the 
   future</p>
   
   <img src="https://assets.onecompiler.app/42t9u98fj/42t9u73nc/csandm.jpeg" alt="Coding project">
 
   <h2>Watching Movies</h2>
-  <p>Movies are a great way for me to relax and spend time with 
+  <p>Movies are a great way to relax and spend time with 
   my family. I love watching a wide variety of genres, 
   from action to comedies.</p>
 
@@ -35,7 +35,7 @@
 
   <h2>Cooking with My Mother</h2>
   <p>I also enjoy spending time in the kitchen cooking with my mother. 
-  It's a fun way for us to bond and try out new recipes together.</p>
+  It's a fun way to bond and try out new recipes together.</p>
 
   <img src="https://assets.onecompiler.app/42t9u98fj/42t9u73nc/vegetarian-pizza.jpg" alt="Cooking with mom">
   
