--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p>Hello! I'm Areen Jain, a sophomore at <a href="https://www.whitneyhs.us/" 
   target="_blank">Whitney High School</a>. 
   I'm passionate about technology and programming, and my goal is 
-  to study computer science at UCLA. I have always been fascinated by 
+  to study computer science. I have always been fascinated by 
   how technology shapes the world, and I dream of making an impact in 
   the field of software development. I am currently on the basketball 
   team and the school's ASB.</p>
