--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Areen Jain's Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-  <h1>Areen Jain</h1>
-  <h2>Sophomore at Whitney High School</h2>
-  
-  <p>Hello! I'm Areen Jain, a sophomore at <a href="https://www.whitneyhs.us/" 
-  target="_blank">Whitney High School</a>. 
-  I'm passionate about technology and programming, and my goal is 
-  to study computer science. I have always been fascinated by 
-  how technology shapes the world, and I dream of making an impact in 
-  the field of software development. I am currently on the basketball 
-  team and the school's ASB.</p>
-
-  <img src="https://assets.onecompiler.app/42t9u98fj/42t9u73nc/Screenshot%202024-09-25%20at%204.18.44%E2%80%AFPM.png	"  alt="Areen Jain at school">
-  
-  <p>Learn more about me at my <a href="page1.html">Interests Page</a>.</p>
-
-</body>
+<html lang="en"> 
+  <head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Maui's 10 Hottest Attractions</title> 
+    <link rel="stylesheet" href="styles.css"> 
+  </head> 
+  <body> 
+    <h1>Maui</h1> 
+    <h2>The 10 Hottest Places to Visit!</h2> 
+    <ol> 
+      <li> <a href="https://www.nps.gov/hale/index.htm" target="_blank">Haleakalā National Park</a> 
+        <p>Home to Maui's highest peak, this park offers stunning sunrise views and diverse landscapes.</p> 
+      </li> 
+      <li> <a href="https://roadtohana.com/" target="_blank">Road to Hāna</a> 
+        <p>A scenic drive featuring waterfalls, rainforests, and unforgettable coastal views.</p> 
+      </li> 
+      <li> <a href="https://dlnr.hawaii.gov/dsp/parks/maui/waianapanapa-state-park/" target="_blank">Waianapanapa State Park</a> 
+        <p>Famous for its black sand beach and sea caves, this park is a natural gem.</p> 
+      </li> 
+      <li> <a href="https://www.mauimagazine.net/molokini-crater/" target="_blank">Molokini Crater</a>
+        <p>One of the best snorkeling and diving spots in Maui, with vibrant marine life.</p> 
+      </li> 
+      <li> <a href="https://kaanapaliresort.com/beaches/" target="_blank">Ka’anapali Beach</a> 
+        <p>A world-famous beach known for its golden sands and crystal-clear waters.</p> 
+      </li> 
+      <li> <a href="https://dlnr.hawaii.gov/dsp/parks/maui/iao-valley-state-monument/" target="_blank">ʻIao Valley State Monument</a>
+        <p>Known for its lush scenery and the iconic ʻIao Needle, this is a must-visit for nature lovers.</p> 
+      </li> 
+      <li> <a href="https://lahainatown.com/" target="_blank">Lahaina Historic Town</a> 
+        <p>A former whaling village, Lahaina is rich in history and has a lively atmosphere.</p> 
+      </li> 
+      <li> <a href="https://mauioceancenter.com/" target="_blank">Maui Ocean Center</a> 
+        <p>A top-rated aquarium that showcases Hawaii’s unique marine life, including sharks and turtles.</p> 
+      </li> 
+      <li> <a href="https://www.hawaii-guide.com/maui/regions/west-maui/honolua-bay" target="_blank">Honolua Bay</a> 
+        <p>A popular snorkeling spot with pristine coral reefs and abundant marine life.</p> 
+      </li> 
+      <li> <a href="https://hawaiistateparks.org/parks/maui/makena-beach-state-park/" target="_blank">Mākena State Park (Big Beach)</a> 
+        <p>This expansive beach offers some of the best sunbathing and bodyboarding on the island.</p> 
+      </li> 
+    </ol> 
+  </body> 
 </html>
