--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> 
   </head> 
   <body> 
-    <h1>Maui</h1> 
+    <h1>MAUI</h1> 
     <h2>The 10 Hottest Places to Visit!</h2> 
     <ol> 
       <li> <a href="https://www.nps.gov/hale/index.htm" target="_blank">Haleakalā National Park</a> 
