--- a/index.html
+++ b/index.html
@@ -5,41 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Maui's 10 Hottest Attractions</title> 
     <link rel="stylesheet" href="styles.css"> 
+    <style>
+      /* Add basic styling for the grid layout */
+      .image-gallery {
+        display: grid;
+        grid-template-areas: 
+          "top top"
+          "side-left side-right"
+          "bottom-left bottom-right";
+        grid-gap: 10px; /* Space between images */
+        max-width: 1000px; /* Adjust to your content width */
+        margin: 0 auto; /* Center the gallery */
+      }
+
+      .image-gallery img {
+        width: 100%;
+        height: auto;
+        border-radius: 8px; /* Optional: Rounded corners */
+      }
+
+      /* Specific grid layout areas */
+      .top {
+        grid-area: top;
+      }
+
+      .side-left {
+        grid-area: side-left;
+      }
+
+      .side-right {
+        grid-area: side-right;
+      }
+
+      .bottom-left {
+        grid-area: bottom-left;
+      }
+
+      .bottom-right {
+        grid-area: bottom-right;
+      }
+    </style>
   </head> 
   <body> 
     <h1>MAUI</h1> 
     <h2>The 10 Hottest Places to Visit!</h2> 
     <ol> 
-      <li> <a href="https://www.nps.gov/hale/index.htm" target="_blank">Haleakalā National Park</a> 
-        <p>Home to Maui's highest peak, this park offers stunning sunrise views and diverse landscapes.</p> 
-      </li> 
-      <li> <a href="https://roadtohana.com/" target="_blank">Road to Hāna</a> 
-        <p>A scenic drive featuring waterfalls, rainforests, and unforgettable coastal views.</p> 
-      </li> 
-      <li> <a href="https://dlnr.hawaii.gov/dsp/parks/maui/waianapanapa-state-park/" target="_blank">Waianapanapa State Park</a> 
-        <p>Famous for its black sand beach and sea caves, this park is a natural gem.</p> 
-      </li> 
-      <li> <a href="https://www.mauimagazine.net/molokini-crater/" target="_blank">Molokini Crater</a>
-        <p>One of the best snorkeling and diving spots in Maui, with vibrant marine life.</p> 
-      </li> 
-      <li> <a href="https://kaanapaliresort.com/beaches/" target="_blank">Ka’anapali Beach</a> 
-        <p>A world-famous beach known for its golden sands and crystal-clear waters.</p> 
-      </li> 
-      <li> <a href="https://dlnr.hawaii.gov/dsp/parks/maui/iao-valley-state-monument/" target="_blank">ʻIao Valley State Monument</a>
-        <p>Known for its lush scenery and the iconic ʻIao Needle, this is a must-visit for nature lovers.</p> 
-      </li> 
-      <li> <a href="https://lahainatown.com/" target="_blank">Lahaina Historic Town</a> 
-        <p>A former whaling village, Lahaina is rich in history and has a lively atmosphere.</p> 
-      </li> 
-      <li> <a href="https://mauioceancenter.com/" target="_blank">Maui Ocean Center</a> 
-        <p>A top-rated aquarium that showcases Hawaii’s unique marine life, including sharks and turtles.</p> 
-      </li> 
-      <li> <a href="https://www.hawaii-guide.com/maui/regions/west-maui/honolua-bay" target="_blank">Honolua Bay</a> 
-        <p>A popular snorkeling spot with pristine coral reefs and abundant marine life.</p> 
-      </li> 
-      <li> <a href="https://hawaiistateparks.org/parks/maui/makena-beach-state-park/" target="_blank">Mākena State Park (Big Beach)</a> 
-        <p>This expansive beach offers some of the best sunbathing and bodyboarding on the island.</p> 
-      </li> 
-    </ol> 
+      <li><a href="https://www.nps.gov/hale/index.htm" target="_blank">Haleakalā National Park</a>
+        <p>Home to Maui's highest peak, this park offers stunning sunrise views and diverse landscapes.</p>
+      </li>
+      <li><a href="https://roadtohana.com/" target="_blank">Road to Hāna</a>
+        <p>A scenic drive featuring waterfalls, rainforests, and unforgettable coastal views.</p>
+      </li>
+      <li><a href="https://dlnr.hawaii.gov/dsp/parks/maui/waianapanapa-state-park/" target="_blank">Waianapanapa State Park</a>
+        <p>Famous for its black sand beach and sea caves, this park is a natural gem.</p>
+      </li>
+      <li><a href="https://www.mauimagazine.net/molokini-crater/" target="_blank">Molokini Crater</a>
+        <p>One of the best snorkeling and diving spots in Maui, with vibrant marine life.</p>
+      </li>
+      <li><a href="https://kaanapaliresort.com/beaches/" target="_blank">Ka’anapali Beach</a>
+        <p>A world-famous beach known for its golden sands and crystal-clear waters.</p>
+      </li>
+      <li><a href="https://dlnr.hawaii.gov/dsp/parks/maui/iao-valley-state-monument/" target="_blank">ʻIao Valley State Monument</a>
+        <p>Known for its lush scenery and the iconic ʻIao Needle, this is a must-visit for nature lovers.</p>
+      </li>
+      <li><a href="https://lahainatown.com/" target="_blank">Lahaina Historic Town</a>
+        <p>A former whaling village, Lahaina is rich in history and has a lively atmosphere.</p>
+      </li>
+      <li><a href="https://mauioceancenter.com/" target="_blank">Maui Ocean Center</a>
+        <p>A top-rated aquarium that showcases Hawaii’s unique marine life, including sharks and turtles.</p>
+      </li>
+      <li><a href="https://www.hawaii-guide.com/maui/regions/west-maui/honolua-bay" target="_blank">Honolua Bay</a>
+        <p>A popular snorkeling spot with pristine coral reefs and abundant marine life.</p>
+      </li>
+      <li><a href="https://hawaiistateparks.org/parks/maui/makena-beach-state-park/" target="_blank">Mākena State Park (Big Beach)</a>
+        <p>This expansive beach offers some of the best sunbathing and bodyboarding on the island.</p>
+      </li>
+    </ol>
+
+    <!-- Image Gallery Section -->
+    <div class="image-gallery">
+      <img class="top" src="https://github.com/areenjain09/APCSP/blob/main/IMG_4090%20(1).JPG?raw=true" alt="Maui Image 1">
+      <img class="side-left" src="https://github.com/areenjain09/APCSP/blob/main/IMG_4190.jpg?raw=true" alt="Maui Image 2">
+      <img class="side-right" src="https://github.com/areenjain09/APCSP/blob/main/IMG_4263.JPG?raw=true" alt="Maui Image 3">
+      <img class="bottom-left" src="https://github.com/areenjain09/APCSP/blob/main/IMG_4391.jpg?raw=true" alt="Maui Image 4">
+      <img class="bottom-right" src="https://github.com/areenjain09/APCSP/blob/main/IMG_4402.jpg?raw=true" alt="Maui Image 5">
+    </div>
   </body> 
 </html>
+
